--- a/forms.html
+++ b/forms.html
@@ -10,20 +10,26 @@
     <div>
         <fieldset>
             <legend>Registration</legend>
-            <form action="" method="post">
+            <form action="Sample/form.html" target="_self" enctype="multipart/form-data">
             <label for="Name">Name</label>
-            <input type="text" name="Name" placeholder="Enter your name" required id="Name" min="5" max="20"><br>
+            <input type="text " autofocus name="Name" placeholder="Enter your name" required id="Name" min="5" max="20" disabled><br>
+            <hr/>
             <label for="Father's name">Father's name</label>
             <input type="text" name="Father's name" id="Father's name" placeholder="Enter your father's name" required><br>
+            <hr/>
             <label for="Mother's name">Mother's name</label>
             <input type="text" name="Mother's name" id="Mother's name" placeholder="Enter your Mother's name" required><br>
+            <hr>
             <label for="Email">Email</label>
             <input type="email" name="Email" id="Email" placeholder="youremail@gmail.com" required><br>
+            <hr>
             <label for="D.O.B">D.O.B</label>
             <input type="date" name="D.O.B" id="D.O.B" required><br>
+            <hr>
             <label for="Gender">Gender</label>
             <input type="radio" name="Gender" id="Gender">male
             <input type="radio" name="Gender" id="Gender">female <br>
+            <hr>
             language known : <br>
             <input type="checkbox" name="c" id="c" value="c">
             <label for="c">c</label><br>
@@ -31,7 +37,23 @@
             <label for="c++">c++</label><br>
             <input type="checkbox" name="java" id="java">
             <label for="java">java</label><br>
-            <input type="submit" value="button" name="button">
+            <hr>
+            language strong you are: <br>
+            <select name="languages" id="languages" multiple size="3">
+                <option value="select">select</option>
+                <option value="c">c</option>
+                <option value="c++">c++</option>
+                <option value="java">java</option>
+                <option value="python">python</option>
+            </select><br>
+            <hr>
+            <label for="Resume">Resume</label><br>
+            <input type="file" name="file" id="Resume"><br>
+            <hr>
+            <label for="color">color</label><br>
+            <input type="color" name="color" id="color"><br>
+            <hr>
+                <button value="submit" selected >submit</button>
             <input type="reset">
         </form>
         </fieldset>
